# mp4v2_source

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/google/mp4v2_github/: ExampleInstrumentedTest.java
app/src/androidTest/java/google/mp4v2_source_github/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MG_log.h  native-lib.cpp
app/src/main/cpp/MP4Parse/: IDataReader.h  MP4Parse.cpp  MP4Parse.h  Mp4Muxer.cpp  Mp4Muxer.h  Mp4TimeLapseMuxer.cpp  Mp4TimeLapseMuxer.h  sps_decode.c  sps_decode.h  tool.c  tool.h
app/src/main/cpp/liblive555-android/: CMakeLists.txt
app/src/main/cpp/liblive555-android/BasicUsageEnvironment/: BasicUsageEnvironment.cpp  BasicUsageEnvironment.mak
app/src/main/cpp/liblive555-android/BasicUsageEnvironment/include/: BasicUsageEnvironment_version.hh
app/src/main/cpp/liblive555-android/UsageEnvironment/: Makefile
app/src/main/cpp/liblive555-android/UsageEnvironment/include/: UsageEnvironment_version.hh
app/src/main/cpp/liblive555-android/groupsock/: GroupsockHelper.cpp  NetInterface.cpp
app/src/main/cpp/liblive555-android/groupsock/include/: NetCommon.h  groupsock_version.hh
app/src/main/cpp/liblive555-android/liveMedia/: #MatroskaFileParser.cpp#  FramedSource.cpp  GenericMediaServer.cpp  H264or5VideoStreamFramer.cpp  MPEGVideoStreamFramer.cpp  Makefile  MatroskaFileParser.cpp  MultiFramedRTPSink.cpp  RTCP.cpp  RTPInterface.cpp  RTPSink.cpp  RTSPClient.cpp  RTSPServer.cpp  RawVideoRTPSink.cpp  RawVideoRTPSource.cpp  StreamParser.cpp
app/src/main/cpp/liblive555-android/liveMedia/include/: FramedSource.hh  RTPInterface.hh  RTPSink.hh  RTPSource.hh  liveMedia_version.hh
app/src/main/cpp/liblive555-android/mediaServer/: DynamicRTSPServer.cpp  Makefile  serverTest.cpp  version.hh
app/src/main/cpp/liblive555-android/proxyServer/: Makefile
app/src/main/cpp/liblive555-android/testProgs/: Makefile  testRTSPClient.cpp
app/src/main/cpp/libmp4v2-android/: CMakeLists.txt  README
app/src/main/cpp/libmp4v2-android/doc/: Authors.txt  BuildRepository.txt  BuildSource.txt  Documentation.txt  GNUmakefile.mk  ReleaseNotes.txt  ToolGuide.txt
app/src/main/cpp/libmp4v2-android/doc/man/man1/: mp4art.1  mp4file.1  mp4subtitle.1  mp4track.1
app/src/main/cpp/libmp4v2-android/include/mp4v2/: project.h  project.h.in
app/src/main/cpp/libmp4v2-android/libplatform/: config.h  config.h.in  endian.h  impl.h  platform.h  platform_base.h  platform_posix.h  platform_win32.h  warning.h
app/src/main/cpp/libmp4v2-android/libplatform/io/: File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystem_posix.cpp  FileSystem_win32.cpp  File_posix.cpp  File_win32.cpp
app/src/main/cpp/libmp4v2-android/libplatform/number/: random.h  random_posix.cpp  random_win32.cpp
app/src/main/cpp/libmp4v2-android/libplatform/process/: process.h  process_posix.cpp  process_win32.cpp
app/src/main/cpp/libmp4v2-android/libplatform/prog/: option.cpp  option.h
app/src/main/cpp/libmp4v2-android/libplatform/sys/: error.cpp  error.h
app/src/main/cpp/libmp4v2-android/libplatform/time/: time.cpp  time.h  time_posix.cpp  time_win32.cpp
app/src/main/cpp/libmp4v2-android/libutil/: Database.cpp  Database.h  Timecode.cpp  Timecode.h  TrackModifier.cpp  TrackModifier.h  Utility.cpp  Utility.h  crc.cpp  crc.h  impl.h  other.cpp  other.h  util.h
app/src/main/cpp/libmp4v2-android/src/: 3gp.cpp  atom_ac3.cpp  atom_amr.cpp  atom_avc1.cpp  atom_avcC.cpp  atom_chpl.cpp  atom_colr.cpp  atom_d263.cpp  atom_dac3.cpp  atom_damr.cpp  atom_dref.cpp  atom_elst.cpp  atom_enca.cpp  atom_encv.cpp  atom_free.cpp  atom_ftab.cpp  atom_ftyp.cpp  atom_gmin.cpp  atom_hdlr.cpp  atom_hinf.cpp  atom_hnti.cpp  atom_href.cpp  atom_mdat.cpp  atom_mdhd.cpp  atom_meta.cpp  atom_mp4s.cpp  atom_mp4v.cpp  atom_mvhd.cpp  atom_nmhd.cpp  atom_ohdr.cpp  atom_pasp.cpp  atom_root.cpp  atom_rtp.cpp  atom_s263.cpp  atom_sdp.cpp  atom_sdtp.cpp  atom_smi.cpp  atom_sound.cpp  atom_standard.cpp  atom_stbl.cpp  (+59 more)
app/src/main/cpp/libmp4v2-android/src/bmff/: bmff.h  impl.h  typebmff.cpp  typebmff.h
app/src/main/cpp/libmp4v2-android/src/itmf/: CoverArtBox.cpp  CoverArtBox.h  Tags.cpp  Tags.h  generic.cpp  generic.h  impl.h  itmf.h  type.cpp  type.h
app/src/main/cpp/libmp4v2-android/src/qtff/: ColorParameterBox.cpp  ColorParameterBox.h  PictureAspectRatioBox.cpp  PictureAspectRatioBox.h  coding.cpp  coding.h  impl.h  qtff.h
app/src/main/cpp/libstreamProtocol-android/: CMakeLists.txt
app/src/main/cpp/libstreamProtocol-android/streamProtocol/: streamProtocol.cpp
app/src/main/cpp/libyuv-android/: CMakeLists.txt  README.md
app/src/main/java/google/github/: LayoutElements.java  MGLog.java  MP4Parse.java  MainActivity.java  Mp4TimeLapseMuxer.java
app/src/main/java/google/github/RtspServer/: RtspActivity.java  RtspServer.java
app/src/main/java/google/mp4v2_github/: LayoutElements.java  MGLog.java  MP4Parse.java  MainActivity.java
app/src/main/java/google/mp4v2_source_github/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_rtsp.xml
app/src/main/res/values/: strings.xml
app/src/test/java/google/mp4v2_github/: ExampleUnitTest.java
app/src/test/java/google/mp4v2_source_github/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
